@@ -5,10 +5,11 @@ bad_md5 = [
 ]
 
 good_md5 = [
-        'ce3c440d7cb5a8ecf6f2284405c857fc',
         '162de236969f148907ae300257585a7d',
         '330271f43f7f472b813b01d187f11af0',
         '3ad80477825a36659c7552346aaf3151',
+        'ce3c440d7cb5a8ecf6f2284405c857fc',
+        'e27c7d952590d5497cf973e1019e4ca1',
         'eeb0bf178bc059bff9bfa7d7b801dc7b',
         'sentinel'
 ]
