@@ -3,6 +3,7 @@ bad_md5 = [
 ]
 
 good_md5 = [
+        '0e0d0a2d819d481083fd58e1b04b2936',
         '821be9880f2397d1680b740e628c2655',
         '84b9249b80ca4f5ebdf47f3cc8799312',
         'd4281c08a738928d114564038434258f',
