@@ -6,6 +6,7 @@ good_md5 = [
         '24314a457a5f2fe057ba30e251c06c35',
         '338056600db2b475e8dc68590ba52fb2',
         '5059d196af0d8df343ef34045b426aca',
+        '509d2fef818a3a5bdf37922ab309627a',
         '792a0197116e1dc7d16bb76cca3f102e',
         'sentinel'
 ]
